-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.760 2010-07-05 22:14:43 jluis Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2010-07-15	pwessel
	* GMT 4.5.3 finalized and released
-----------------------------------------------------------------------------------------
2010-07-05	jluis
	* ps2raster.c:		Also converts ps files with headers but no image. Now it will
				create a 1x1 raster instead of aborting with an error message.

2010-06-29	pwessel
	* grdcontour.c:		Placement of H and L annotations improved by using centroids

2010-06-28	pwessel
	* mapproject.c:		Applied scaling to -C/dx/dy when -Fk was used, despite docs
				saying -C is in meters when -F is used. Fixed, and clarified
				docs/man to say with -F, -C is always in meters.
	* gmt_io.c:		Added GMT_IS_DIMENSION for converting input dimensions which
				may have a suffix unit (e.g., 3.5c).  This can occur in the
				input to psxy[z], which sometimes complained about bad input.
	* psxy[z].c:		Better handling of dimensions with units passed via columns
				in the data file, as in psxy.

2010-06-25	pwessel
	* gmt_io.c:		GMT_fgets now checks for input record truncation and handles
				this gracefully (gives warning and winds to next record).

2010-06-24	pwessel
	* nearneighbor.c:	Did not handle periodic x input when -fg was used
	* grdmask.c:		Did not handle periodic x input when -fg was used
	* psmask.c:		Did not handle periodic x input when -fg was used
	* surface.c:		Did not handle periodic x input when -fg was used

2010-06-24	jluis
	* grdview.c:		Check that topo and illumination file have the same size,
				otherwise it would crash.

2010-06-30  remko
	* pstext.c:     Did not recognize -f option, so could not use e.g. -f0T

2010-06-21	pwessel